--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 remote_theme: pages-themes/slate@v0.2.0
 title: Analyzing Champion Impact in League of Legends Results
+include:
+  - assets/css/custom.css
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
